Project Simplebank  {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple bank Database
  '''
}

Table users as U {
  id bigserial [pk]
  username varchar [pk]
  hash_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamp [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamp [not null, default: `now()`]
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamp [not null, default: `now()`]
  
  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null] 
  amount bigint [not null]
  created_at timestamp [default: `now()`, not null]
  
  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null] 
  to_account_id bigint [ref: > A.id, not null] 
  amount bigint [not null]
  created_at timestamp [default: `now()`, not null]
  
  Indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > users.username, not null]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [default: false, not null]
  expires_at timestamp [not null, default: `now()`]
}
